--- a/tags/releases/berlios-alpha1/.htaccess
+++ b/tags/releases/berlios-alpha1/.htaccess
@@ -1,24 +1,9 @@
-<?php
-// Given an array of configuration data
-$configArray = array(
-	// Full path to application.
-	// Most commonly autodetection is OK.
-	// When getting errors like 'File not found', input full path manually 
-	'BasePath' => realpath( '..' ),
+RewriteEngine on
+RewriteRule ^/(.*) /html/$1
+RewriteRule !\.(js|ico|gif|jpg|png|css)$ index.php
 
-	// Database Connection Data
-	'database' => array(
-        'adapter' => 'mysqli',
-        'params'  => array(
-            'host'     => 'localhost',
-            'username' => 'mysql-username',
-            'password' => 'mysql-password',
-            'dbname'   => 'Images'
-        )
-    )
-);
-
-
-
-
-?>
+AuthType Digest
+AuthName "Restricted Access"
+AuthDigestDomain /
+AuthUserFile /home/groups/yafa/htdocs/digest
+Require valid-user
